fixing background not showing

--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url('/images/pattern-background-desktop.svg');
+    background-image: url('../images/pattern-background-desktop.svg');
     background-repeat: no-repeat;
     background-size: 100% 50%;
     background-color: var(--secondaryColor);
